Handle advanced profiles setup